# cryocore

./: .gitattributes  .gitignore  BIOSAFETY.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  GOVERNANCE.md  MAINTAINERS.md  Makefile  NON_CLAIMS.md  NOTICE.md  PUBLIC_RELEASE.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml  requirements-dev.txt
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
campaigns/: README.md
demos/: README.md
docs/: PUBLIC_LAUNCH_PAD.md  README.md  adoption-guide.md  agent-quickstart.md  agent-skill-guide.md  chimerax-shared-posture.md  claim-levels.md  compute-backends.md  data-policy.md  demo-gallery.md  failure-modes.md  github-repo-profile.md  glossary.md  goal-orchestration.md  license-scope.md  linear-orchestration.md  local-installation.md  mission-catalog.md  module-catalog.md  move-duplicate-map.md  no-false-success-hardening.md  privacy-threat-model.md  prompt-library.md  provider-execution-model.md  provider-readiness.md  public-accession-apis.md  public-repo-and-private-image-policy.md  public-switch-checklist.md  runpod-stack.md  schema-catalog.md  skill-installation.md  split-evaluation.md  tooling-and-licensing.md  toolwatch-2026-05-15.md  toolwatch-2026-05-27.md  toolwatch-to-lane-policy.md  tour.md  troubleshooting.md  use-cases.md  validation-command-matrix.md  (+2 more)
examples/: README.md
modules/: README.md
references/: artifact-contract.md  software-registry.yaml
(+242 files in other folders)
